PM2 example: develop

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -32,7 +32,7 @@ nav, section
 body
   font 62.5% / 1.5 Helvetica, Arial, "Lucida Grande", "Lucida Sans", Tahoma, Verdana, sans-serif
   text-align center
-  background #000
+  background #fff
 
 #wrapper
   width 920px
